# digit-recognizer

./: .gitignore  LICENSE  README.md  digit_recognizer.ipynb  environment.yml  requirements.txt  setup.cfg  setup.py
data/: model.pt
digit_recognizer/: loss.py  train.py
src/: api.py  config.py  data.py  data_io.py  dataloader.py  loss.py  model.py  train.py
tests/: test_data.py  test_data_io.py
