[metadata]
name = digit_recognizer
version = 1.0.0
description = Build a simple digit classifier using PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harbenml/digit-recognizer
author = harbenml
author_email = harbenml@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests